[package]
name = "typed-slab"
version = "0.1.7"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
edition = "2018"
repository = "https://github.com/rate-technology/typed-slab"
homepage = "https://github.com/rate-technology/typed-slab"
description = "Typed wrapper for Slab"
readme = "README.md"
keywords = ["slab", "allocator"]
categories = ["memory-management", "data-structures"]
license = "MIT"

[dependencies]
slab = "0.4.6"
